gap fixes

--- a/styles/main.css
+++ b/styles/main.css
@@ -113,7 +113,7 @@
             width: 360px;
             margin: 0 auto;
             .section {
-                margin-bottom: 40px;
+                margin-bottom: 40px !important;
             }
             
             p {
